...
}

object TabActionsMenuTestTags {
    const val Menu = "tab_actions"
    const val Toolbar = "tab_actions_menu_toolbar"
    const val Favorite = "tab_actions_menu_favorite"
    const val Pin = "tab_actions_menu_pin"
    const val PageGroup = "tab_actions_menu_page_group"
    const val CandyGroup = "tab_actions_menu_candy_group"
    const val Trail = "tab_actions_menu_trail"
    const val Snooze = "tab_actions_snooze"
    const val CloseAllTabs = "tab_actions_menu_close_all_tabs"
    const val DomainMute = "domain_mute_menu_item"
}

enum class TabActionsMenuLabel {
    Title,
    Favorite,
...
